--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,7 +17,7 @@ jobs:
         dotnet-version: '3.1.201'
     
     - name: Build Application
-      run: dotnet publish -c Release ./RestAPI.Address.csproj
+      run: dotnet publish -c Release ./RestAPI.Address/RestAPI.Address.csproj
 
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
