--- a/.github/workflows/dotnet31.yml
+++ b/.github/workflows/dotnet31.yml
@@ -1,25 +1,26 @@
-name: .NET
+name: Deploy to Github Pages
 
 on:
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
-    - name: Setup .NET
+
+    - name: Setup .NET Core SDK
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 5.0.x
-    - name: Restore dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build --no-restore
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
+        dotnet-version: '3.1.201'
+    
+    - name: Build Application
+      run: dotnet publish -c Release ./RestAPI.Address/RestAPI.Address.csproj
+
+    - name: Deploy
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+           github_token: ${{ secrets.GITHUB_TOKEN }}
+           publish_dir: ./RestAPI.Address/bin/Release/netstandard3.1/publish/wwwroot/
