--- a/.github/workflows/dotnet31.yml
+++ b/.github/workflows/dotnet31.yml
@@ -17,14 +17,10 @@ jobs:
         dotnet-version: '3.1.201'
     
     - name: Build Application
-      run: dotnet publish -c Release ./RestAPI.Address.sln
+      run: dotnet publish -c Release ./RestAPI.Address/RestAPI.Address.csproj
 
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
            github_token: ${{ secrets.GITHUB_TOKEN }}
-           publish_dir: ./bin/Release/netstandard3.1/publish/wwwroot/
-           BASE_BRANCH: master
-           BRANCH: gh-pages
-           FOLDER: build/wwwroot
-           CLEAN: true
+           publish_dir: ./RestAPI.Address/bin/Release/netstandard2.1/publish/wwwroot/
