--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -8,6 +8,16 @@ jobs:
         # Checkout the code
         - uses: actions/checkout@v2
 
+        # Install .NET Core SDKname: 'Publish application'
+on: push
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+        # Checkout the code
+        - uses: actions/checkout@v2
+
         # Install .NET Core SDK
         - name: Setup .NET Core
           uses: actions/setup-dotnet@v1
@@ -32,4 +42,29 @@ jobs:
             publish_dir: bin/Release/netstandard2.1/publish/wwwroot
             allow_empty_commit: false
             keep_files: false
+            force_orphan: true
+
+        - name: Setup .NET Core
+          uses: actions/setup-dotnet@v1
+          with:
+            dotnet-version: 3.1.x
+
+        # Run tests
+        - name: Test
+          run: dotnet test
+
+        # Generate the website
+        - name: Publish
+          run: dotnet publish RestAPI.Address.csproj --configuration Release
+
+        # Publish the website
+        - name: GitHub Pages action
+          if: ${{ github.ref == 'refs/heads/master' }} # Publish only when the push is on master
+          uses: peaceiris/actions-gh-pages@v3.6.1
+          with:
+            github_token: ${{ secrets.PUBLISH_TOKEN }}
+            publish_branch: gh-pages
+            publish_dir: bin/Release/netstandard3.1/publish/wwwroot
+            allow_empty_commit: false
+            keep_files: true
             force_orphan: true
